--- a/GreenPlatform/src/main/resources/static/systemStatic/css/systemStyle.css
+++ b/GreenPlatform/src/main/resources/static/systemStatic/css/systemStyle.css
@@ -10,6 +10,15 @@ header{
 .mr-top-50{
     margin-top: 50px;
 }
+.float-right{
+    float: right;
+}
+.badge-warning{
+    background-color: #f0ad4e;
+}
+.badge-primary{
+    background-color: #337ab7;
+}
 /*公共end*/
 
 .indexHeader{
