--- a/GreenPlatform/src/main/resources/templates/login/login.html
+++ b/GreenPlatform/src/main/resources/templates/login/login.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/publicFrame/bootstrap-3.3.7-dist/css/bootstrap.css">
     <link rel="stylesheet" href="/publicFrame/bootstrap-3.3.7-dist/css/bootstrapValidator.min.css">
     <link rel="stylesheet" href="/publicFrame/bootstrap-3.3.7-dist/css/bootstrap-dialog.css">
-    <link rel="stylesheet" href="/system/css/systemStyle.css">
+    <link rel="stylesheet" href="/systemStatic/css/systemStyle.css">
 </head>
 <body>
 <header class="loginHeader">
@@ -35,6 +35,18 @@
                                 <div class="col-sm-12">
                                     <input type="password" class="form-control input-lg" id="cPassword" name="cPassword" placeholder="请输入登陆密码">
                                 </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="radio-inline">
+                                    <div class="col-sm-12">
+                                        <input type="radio" name="cRylb" id="cRylb_2" value="2" checked> 平台用户
+                                    </div>
+                                </label>
+                                <label class="radio-inline">
+                                    <div class="col-sm-12">
+                                        <input type="radio" name="cRylb" id="cRylb_1" value="1"> 系统管理员
+                                    </div>
+                                </label>
                             </div>
                             <div class="form-group">
                                 <div class="col-sm-12">
@@ -62,6 +74,6 @@
 <script src="/publicFrame/bootstrap-3.3.7-dist/js/bootstrapValidator.min.js"></script>
 <script src="/publicFrame/bootstrap-3.3.7-dist/js/bootstrap-dialog.js"></script>
 <script src="/publicJs/SendRequest.js"></script>
-<script src="/system/js/login/login.js"></script>
+<script src="/loginStatic/js/login.js"></script>
 </body>
 </html>
