--- a/GreenPlatform/src/main/resources/templates/login/register.html
+++ b/GreenPlatform/src/main/resources/templates/login/register.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/publicFrame/bootstrap-3.3.7-dist/css/bootstrap.css">
     <link rel="stylesheet" href="/publicFrame/bootstrap-3.3.7-dist/css/bootstrapValidator.min.css">
     <link rel="stylesheet" href="/publicFrame/bootstrap-3.3.7-dist/css/bootstrap-dialog.css">
-    <link rel="stylesheet" href="/system/css/systemStyle.css">
+    <link rel="stylesheet" href="/systemStatic/css/systemStyle.css">
 </head>
 <body>
 <header class="loginHeader">
@@ -20,7 +20,7 @@
             <div class="col-md-4 col-xs-10">
                 <div class="panel panel-success">
                     <div class="panel-heading text-center">
-                        <b>用户注册</b>
+                        <b>前端用户注册</b>
                     </div>
                     <div class="panel-body">
                         <form class="form-horizontal"  id="registerForm">
@@ -72,6 +72,6 @@
 <script src="/publicFrame/bootstrap-3.3.7-dist/js/bootstrapValidator.min.js"></script>
 <script src="/publicFrame/bootstrap-3.3.7-dist/js/bootstrap-dialog.js"></script>
 <script src="/publicJs/SendRequest.js"></script>
-<script src="/system/js/register/register.js"></script>
+<script src="/loginStatic/js/register.js"></script>
 </body>
 </html>
