--- a/GreenPlatform/src/main/resources/templates/plate/rwgl/index.html
+++ b/GreenPlatform/src/main/resources/templates/plate/rwgl/index.html
@@ -22,7 +22,7 @@
     <div class="row center_main">
         <div class="col-md-2 center_main_left">
             <ul class="nav nav-pills nav-stacked">
-                <li class="active" role="presentation"><a href="/plate/index">用户管理</a></li>
+                <li class="active" role="presentation"><a href="/base/index">用户管理</a></li>
                 <li role="presentation"><a href="/base/rwgl">任务管理</a></li>
                 <li role="presentation"><a href="/base/nlgl">能量管理</a></li>
                 <li role="presentation"><a href="/base/spgl">商品管理</a></li>
