--- a/GreenPlatform/src/main/resources/templates/plate/yhgl/index.html
+++ b/GreenPlatform/src/main/resources/templates/plate/yhgl/index.html
@@ -20,13 +20,13 @@
             <h4>欢迎你，系统管理员！</h4>
         </div>
         <div class="col-md-1">
-            <span class=""><a href="" id="loginout">退出登录</a></span>
+            <a href="/base/loginout" id="loginout">注销</a>
         </div>
     </div>
     <div class="row center_main">
         <div class="col-md-2 center_main_left">
             <ul class="nav nav-pills nav-stacked">
-                <li class="active" role="presentation"><a href="/plate/index">用户管理</a></li>
+                <li class="active" role="presentation"><a href="/base/index">用户管理</a></li>
                 <li role="presentation"><a href="/base/rwgl">任务管理</a></li>
                 <li role="presentation"><a href="/base/nlgl">能量管理</a></li>
                 <li role="presentation"><a href="/base/spgl">商品管理</a></li>
@@ -93,7 +93,9 @@
                         <div class="row">
                             <div class="col-sm-6">
                                 <label for="cRylb" class="sr-only"></label>
-                                <select class="form-control" id="cRylb"></select>
+                                <select class="form-control" id="cRylb" disabled>
+                                    <option value="1" selected>平台用户</option>
+                                </select>
                             </div>
                             <div class="col-sm-6">
                                 <label for="cLoginname" class="sr-only"></label>
