--- a/GreenPlatform/src/main/resources/templates/system/index.html
+++ b/GreenPlatform/src/main/resources/templates/system/index.html
@@ -36,7 +36,6 @@
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">我的 <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <!--<li><a href="/base/account" target="_blank" id="myAccount">我的账户</a></li>-->
                                 <li><a href="#" id="myAccount">我的账户</a></li>
                                 <li><a href="#">收徒</a></li>
                                 <li><a href="/base/loginout">退出</a></li>
@@ -236,13 +235,13 @@
                             </ul>
                         </li>
                         <li class="list-group-item">
-                            <a href="">捐赠记录</a>
+                            <a href="/base/history" target="_blank">捐赠记录</a>
                         </li>
                         <li class="list-group-item">
-                            <a href="">充值历史</a>
+                            <a href="/base/history" target="_blank">充值历史</a>
                         </li>
                         <li class="list-group-item">
-                            <a href="">提现历史</a>
+                            <a href="/base/history" target="_blank">提现历史</a>
                         </li>
                     </ul>
                 </div>
@@ -258,6 +257,6 @@
     <script src="/publicFrame/bootstrap-3.3.7-dist/js/bootstrap.js"></script>
     <script src="/publicJs/SendRequest.js"></script>
     <script src="/publicJs/publicyw.js"></script>
-    <script src="/systemStatic/js/index/index.js"></script>
+    <script src="/systemStatic/js/index.js"></script>
 </body>
 </html>
