利用mybatis自动生成数据表的mapper和mapper映射

--- a/GreenPlatform/src/main/resources/templates/plate/yhgl/index.html
+++ b/GreenPlatform/src/main/resources/templates/plate/yhgl/index.html
@@ -82,7 +82,7 @@
                         <div class="row">
                             <div class="col-sm-6">
                                 <label for="cUsername" class="sr-only"></label>
-                                <input type="text" class="form-control" id="cUsername" name="cUsername" placeholder="请输入姓名">
+                                <input type="text" class="form-control" id="cUsername" name="cUsername" placeholder="请输入用户姓名">
                                 <input type="hidden" class="form-control" id="cUserid" name="cUserid">
                             </div>
                             <div class="col-sm-6">
@@ -113,21 +113,21 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-sm-6">
+                            <!--<div class="col-sm-6">
                                 <label for="cWxhm" class="sr-only"></label>
                                 <input type="text" class="form-control" id="cWxhm" name="cWxhm" placeholder="请输入微信号码">
-                            </div>
+                            </div>-->
                             <div class="col-sm-6">
                                 <label for="cZjlx" class="sr-only"></label>
                                 <select class="form-control" id="cZjlx"></select>
                             </div>
-                        </div>
-                        <div class="row">
                             <div class="col-sm-6">
                                 <label for="cZjhm" class="sr-only"></label>
                                 <input type="text" class="form-control" id="cZjhm" name="cZjhm" placeholder="请输入证件号码">
                             </div>
-                            <div class="col-sm-6">
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-12">
                                 <label for="cJtzz" class="sr-only"></label>
                                 <input type="text" class="form-control" id="cJtzz" name="cJtzz" placeholder="请输入家庭住址">
                             </div>
@@ -139,7 +139,7 @@
                             </div>
                             <div class="col-sm-6">
                                 <label for="cPassword1" class="sr-only"></label>
-                                <input type="cPassword1" class="form-control" id="cPassword1" name="cPassword" placeholder="请再次输入初始密码">
+                                <input type="Password" class="form-control" id="cPassword1" name="cPassword1" placeholder="请再次输入初始密码">
                             </div>
                         </div>
                     </form>
