--- a/GreenPlatform/src/main/resources/templates/plate/index.html
+++ b/GreenPlatform/src/main/resources/templates/plate/index.html
@@ -18,17 +18,9 @@
                 <span class="header-nav-title">绿沙平台后台管理系统</span>
             </div>
             <div class="col-md-offset-4 col-xs-offset-4 col-md-4 col-xs-4">
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="#" class="dropdown-toggle dropdown-link" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">系统管理员 <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Action</a></li>
-                            <li><a href="#">Another action</a></li>
-                            <li><a href="#">Something else here</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="#">Separated link</a></li>
-                        </ul>
-                    </li>
+                <ul class="nav navbar-nav navbar-right plate-navbar-right">
+                    <li class="navbar-loginUser">欢迎您，<span>系统管理员</span></li>
+                    <li><a href="/base/loginout">退出系统</a></li>
                 </ul>
             </div>
         </div>
@@ -70,6 +62,9 @@
                                 <li>
                                     <a href="#" class="first-level"><i class="fa fa-indent nav_icon"></i>系统配置<span class="fa fa-chevron-right"></span></a>
                                     <ul class="nav nav-second-level">
+                                        <li>
+                                            <a href="#" class="second-level" data-targetUrl="/base/ywjcdm">业务基础代码维护</a>
+                                        </li>
                                         <li>
                                             <a href="#" class="second-level" data-targetUrl="/base/yhgl">权限管理</a>
                                         </li>
