--- a/GreenPlatform/src/main/resources/templates/web/history.html
+++ b/GreenPlatform/src/main/resources/templates/web/history.html
@@ -119,6 +119,6 @@
 <script src="/publicFrame/My97DatePicker/WdatePicker.js"></script>
 <script src="/publicJs/SendRequest.js"></script>
 <script src="/publicJs/publicyw.js"></script>
-<script src="/js/history.js"></script>
+<script src="/js/web/history.js"></script>
 </body>
 </html>
