--- a/GreenPlatform/src/main/resources/templates/web/index.html
+++ b/GreenPlatform/src/main/resources/templates/web/index.html
@@ -8,7 +8,7 @@
     <title>绿沙平台</title>
     <link rel="stylesheet" href="/publicFrame/bootstrap-3.3.7-dist/css/bootstrap.css">
     <link rel="stylesheet" href="/publicFrame/bootstrap-3.3.7-dist/css/bootstrap-dialog.css">
-    <link rel="stylesheet" href="/style/systemStyle.css">
+    <link rel="stylesheet" href="/style/web/webstyle.css">
 
 </head>
 <body>
@@ -266,6 +266,6 @@
     <script src="/publicFrame/bootstrap-3.3.7-dist/js/bootstrap-dialog.js"></script>
     <script src="/publicJs/SendRequest.js"></script>
     <script src="/publicJs/publicyw.js"></script>
-    <script src="/js/systemIndex.js"></script>
+    <script src="/js/web/webIndex.js"></script>
 </body>
 </html>
