--- a/GreenPlatform/src/main/resources/templates/login/login.html
+++ b/GreenPlatform/src/main/resources/templates/login/login.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/publicFrame/bootstrap-3.3.7-dist/css/bootstrap.css">
     <link rel="stylesheet" href="/publicFrame/bootstrap-3.3.7-dist/css/bootstrapValidator.min.css">
     <link rel="stylesheet" href="/publicFrame/bootstrap-3.3.7-dist/css/bootstrap-dialog.css">
-    <link rel="stylesheet" href="/style/login.css">
+    <link rel="stylesheet" href="/style/login/login.css">
 </head>
 <body>
 <header class="loginHeader">
@@ -74,6 +74,6 @@
 <script src="/publicFrame/bootstrap-3.3.7-dist/js/bootstrapValidator.min.js"></script>
 <script src="/publicFrame/bootstrap-3.3.7-dist/js/bootstrap-dialog.js"></script>
 <script src="/publicJs/SendRequest.js"></script>
-<script src="/js/login.js"></script>
+<script src="/js/login/login.js"></script>
 </body>
 </html>
