后台管理与前端页面调整完毕

--- a/GreenPlatform/src/main/resources/static/style/web/webStyle.css
+++ b/GreenPlatform/src/main/resources/static/style/web/webStyle.css
@@ -32,6 +32,60 @@ header{
 .mission{
     margin-top:100px;
 }
+.mission-js{
+    position: relative;
+    animation:mymove 2s infinite;
+    -webkit-animation:jsMove 2s infinite; /*Safari and Chrome*/
+}
+.mission-sf{
+    position: relative;
+    animation:mymove 2s infinite;
+    -webkit-animation:sfMove 2s infinite; /*Safari and Chrome*/
+}
+.mission-yg{
+    position: relative;
+    animation:mymove 2s infinite;
+    -webkit-animation:ygMove 2s infinite; /*Safari and Chrome*/
+}
+@keyframes jsMove
+{
+    0%   {left:10px; top:0px;}
+    50%  {left:0px; top:10px;}
+    100% {left:10px; top:0px;}
+}
+
+@-webkit-keyframes jsMove /*Safari and Chrome*/
+{
+    0%   {left:10px; top:0px;}
+    50%  {left:0px; top:10px;}
+    100% {left:10px; top:0px;}
+}
+@keyframes sfMove
+{
+    0%   {left:0px; top:0px;}
+    50%  {left:0px; top:10px;}
+    100% {left:0px; top:0px;}
+}
+
+@-webkit-keyframes sfMove /*Safari and Chrome*/
+{
+    0%   {left:0px; top:0px;}
+    50%  {left:0px; top:10px;}
+    100% {left:0px; top:0px;}
+}
+@keyframes ygMove
+{
+    0%   {left:0px; top:10px;}
+    50%  {left:0px; top:0px;}
+    100% {left:0px; top:10px;}
+}
+
+@-webkit-keyframes ygMove /*Safari and Chrome*/
+{
+    0%   {left:0px; top:10px;}
+    50%  {left:0px; top:0px;}
+    100% {left:0px; top:10px;}
+}
 .mission img{
     width: 100%;
     height: 100%;
