--- a/GreenPlatform/src/main/resources/templates/plate/index.html
+++ b/GreenPlatform/src/main/resources/templates/plate/index.html
@@ -69,7 +69,7 @@
                                             <a href="#" class="second-level" data-targetUrl="/base/yhgl">权限管理</a>
                                         </li>
                                         <li>
-                                            <a href="#" class="second-level" data-targetUrl="/base/yhgl">系统用户管理</a>
+                                            <a href="#" class="second-level" data-targetUrl="/base/plateYhgl">系统用户管理</a>
                                         </li>
                                         <li>
                                             <a href="#" class="second-level" data-targetUrl="/base/yhgl">系统参数设置</a>
