--- a/GreenPlatform/src/main/resources/templates/plate/rwgl/main.html
+++ b/GreenPlatform/src/main/resources/templates/plate/rwgl/main.html
@@ -48,12 +48,12 @@
         <div class="col-md-12">
             <form class="form-inline">
                 <div class="form-group">
-                    <label for="cUsernameSearch">姓名：</label>
-                    <input type="text" class="form-control" id="cUsernameSearch" placeholder="请输入姓名">
+                    <label for="cUsername">姓名：</label>
+                    <input type="text" class="form-control" id="cUsername" placeholder="请输入姓名">
                 </div>
                 <div class="form-group">
-                    <label for="cRwlbSearch">任务类别：</label>
-                    <select class="form-control" id="cRwlbSearch"></select>
+                    <label for="cRwlb">任务类别：</label>
+                    <select class="form-control" id="cRwlb"></select>
                 </div>
                 <button type="button" class="btn btn-info" id="btnSearch">搜索</button>
             </form>
