--- a/GreenPlatform/src/main/resources/templates/plate/yhgl/main.html
+++ b/GreenPlatform/src/main/resources/templates/plate/yhgl/main.html
@@ -48,19 +48,18 @@
         <div class="col-md-12">
             <form class="form-inline">
                 <div class="form-group">
-                    <label for="cRylb">人员类别：</label>
-                    <select class="form-control" id="cRylb"></select>
-                </div>
-                <div class="form-group">
                     <label for="cUsername">姓名：</label>
                     <input type="text" class="form-control" id="cUsername" placeholder="请输入姓名">
                 </div>
                 <div class="form-group">
-                    <label for="cPhone">电话号码：</label>
-                    <input type="text" class="form-control" id="cPhone" placeholder="请输入电话号码">
+                    <label for="cZjhm">证件号码：</label>
+                    <input type="text" class="form-control" id="cZjhm" placeholder="请输入电话号码">
+                </div>
+                <div class="form-group">
+                    <label for="cRydj">账户等级：</label>
+                    <select class="form-control" id="cRydj"></select>
                 </div>
                 <button type="button" class="btn btn-info" id="btnSearch">搜索</button>
-                <button type="button" class="btn btn-primary" id="btnAdd">新增</button>
             </form>
         </div>
     </div>
