--- a/GreenPlatform/src/main/resources/templates/plate/yypz/edit.html
+++ b/GreenPlatform/src/main/resources/templates/plate/yypz/edit.html
@@ -37,72 +37,52 @@
             <tbody>
             <tr>
                 <td align="right">
-                    <label for="cUsername" class="control-label"><i class="require">*</i>用户姓名:</label>
+                    <label for="cYwlxdm" class="control-label"><i class="require">*</i>业务类型代码:</label>
                 </td>
                 <td align="left">
-                    <input type="text" class="form-control" id="cUsername" name="cUsername" placeholder="请输入用户姓名">
+                    <input type="text" class="form-control" id="cYwlxdm" name="cYwlxdm" placeholder="请输入业务类型代码">
                 </td>
                 <td align="right">
-                    <label for="cSex" class="control-label"><i class="require">*</i>用户性别:</label>
+                    <label for="cMenudm" class="control-label"><i class="require">*</i>菜单功能代码:</label>
                 </td>
                 <td align="left">
-                    <select class="form-control" id="cSex"></select>
+                    <input type="text" class="form-control" id="cMenudm" name="cMenudm" placeholder="请输入菜单功能代码">
                 </td>
             </tr>
             <tr>
                 <td align="right">
-                    <label for="cLoginname" class="control-label"><i class="require">*</i>登录名:</label>
+                    <label for="cMenumc" class="control-label"><i class="require">*</i>菜单功能名称:</label>
                 </td>
                 <td align="left">
-                    <input type="text" class="form-control" id="cLoginname" name="cLoginname" placeholder="请输入用户登录名">
+                    <input type="text" class="form-control" id="cMenumc" name="cMenumc" placeholder="请输入菜单功能名称">
                 </td>
                 <td align="right">
-                    <label for="cEmail" class="control-label"><i class="require">*</i>电子邮箱:</label>
+                    <label for="cMenujc" class="control-label"><i class="require">*</i>菜单功能简称:</label>
                 </td>
                 <td align="left">
-                    <input type="text" class="form-control" id="cEmail" name="cEmail" placeholder="请输入邮箱">
+                    <input type="text" class="form-control" id="cMenujc" name="cMenujc" placeholder="请输入菜单功能简称">
                 </td>
             </tr>
             <tr>
                 <td align="right">
-                    <label for="cPhone" class="control-label"><i class="require">*</i>电话号码:</label>
+                    <label for="cRuncommand" class="control-label"><i class="require">*</i>执行命令:</label>
                 </td>
-                <td align="left">
-                    <input type="text" class="form-control" id="cPhone" name="cPhone" placeholder="请输入电话号码">
-                </td>
-                <td align="right">
-                    <label for="cZjlx" class="control-label"><i class="require">*</i>证件类型:</label>
-                </td>
-                <td align="left">
-                    <select class="form-control" id="cZjlx"></select>
+                <td align="left" colspan="3">
+                    <input type="text" class="form-control" id="cRuncommand" name="cRuncommand" placeholder="请输入执行命令">
                 </td>
             </tr>
             <tr>
                 <td align="right">
-                    <label for="cZjhm" class="control-label"><i class="require">*</i>证件号码:</label>
+                    <label for="cSort" class="control-label"><i class="require">*</i>排序号:</label>
                 </td>
                 <td align="left">
-                    <input type="text" class="form-control" id="cZjhm" name="cZjhm" placeholder="请输入证件号码">
+                    <input type="text" class="form-control" id="cSort" name="cSort" placeholder="请输入排序号">
                 </td>
                 <td align="right">
-                    <label for="cJtzz" class="control-label">家庭住址:</label>
+                    <label for="cZt" class="control-label">状态:</label>
                 </td>
                 <td align="left">
-                    <input type="text" class="form-control" id="cJtzz" name="cJtzz" placeholder="请输入家庭住址">
-                </td>
-            </tr>
-            <tr class="password-field">
-                <td align="right">
-                    <label for="cPassword" class="control-label">初始密码:</label>
-                </td>
-                <td align="left">
-                    <input type="password" class="form-control" id="cPassword" name="cPassword" placeholder="设置初始登陆密码">
-                </td>
-                <td align="right">
-                    <label for="cPassword1" class="control-label">确认密码:</label>
-                </td>
-                <td align="left">
-                    <input type="Password" class="form-control" id="cPassword1" name="cPassword1" placeholder="请再次输入初始密码">
+                    <select class="form-control" id="cZt"></select>
                 </td>
             </tr>
             </tbody>
