--- a/GreenPlatform/src/main/resources/templates/plate/qxgl/syyh.html
+++ b/GreenPlatform/src/main/resources/templates/plate/qxgl/syyh.html
@@ -1,13 +1,61 @@
 <!doctype html>
-<html lang="ch">
+<html lang="ch" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="/publicFrame/bootstrap-3.3.7-dist/css/bootstrap.css">
+    <link rel="stylesheet" href="/publicFrame/bootstrap-3.3.7-dist/css/bootstrap-dialog.css">
+    <link rel="stylesheet" href="/publicFrame/bootstrap-3.3.7-dist/css/bootstrapValidator.min.css">
+    <style>
+        .table label{
+            line-height: 35px;
+        }
+        .edit-footer{
+            width: 97%;
+            height: 50px;
+            text-align: center;
+            bottom: 0;
+            overflow: hidden;
+            position: absolute;
+        }
+        .page-jssq label{
+            font-weight: normal;
+        }
+    </style>
 </head>
 <body>
-    授予用户
+<div class="container-fluid page-jssq">
+    <table class="table">
+        <tr>
+            <th>操作</th>
+            <th>用户姓名</th>
+            <th>系统登录名</th>
+        </tr>
+        <tr th:each="plateuserRoleList : ${plateuserRoleList}" >
+            <td><input type="checkbox" th:id="${plateuserRoleList['cUserid']}"  th:attr="checked = ${plateuserRoleList['isCheck']} == '1' ? true : false"></td>
+            <td th:text="${plateuserRoleList['cUsername']}" ></td>
+            <td th:text="${plateuserRoleList['cLoginname']}" ></td>
+        </tr>
+    </table>
+
+    <div class="edit-footer">
+        <button type="button" class="btn btn-primary" id="btnSave">保存</button>
+        <button type="button" class="btn btn-default" id="btnRet">关闭</button>
+    </div>
+</div>
+
+
+
+<script src="/publicFrame/jquery/jquery-3.4.0.min.js"></script>
+<script src="/publicFrame/bootstrap-3.3.7-dist/js/bootstrap.js"></script>
+<script src="/publicFrame/bootstrap-3.3.7-dist/js/bootstrap-dialog.js"></script>
+<script src="/publicFrame/bootstrap-3.3.7-dist/js/bootstrapValidator.min.js"></script>
+<script src="/publicJs/publicCommon.js"></script>
+<script src="/publicJs/publicyw.js"></script>
+<script src="/publicJs/SendRequest.js"></script>
+<script src="/js/qxgl/syyh.js"></script>
 </body>
 </html>
